--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=5000
-MONGO_URL='mongodb+srv://mohabbatrj:productsapi@productsapi.vyfe4ti.mongodb.net/productsapi?retryWrites=true&w=majority'
-BASE_URL='http://localhost/'
+MONGO_URL=''
